--- a/Comercial Estefannny/View/pruebabase.xaml
+++ b/Comercial Estefannny/View/pruebabase.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Comercial_Estefannny.View.pruebabase"
+﻿<UserControl x:Class="Comercial_Estefannny.View.Pruebabase"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
