--- a/Comercial Estefannny/App.xaml
+++ b/Comercial Estefannny/App.xaml
@@ -2,12 +2,11 @@
     x:Class="Comercial_Estefannny.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    StartupUri="View/PantallaInicial.xaml">
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Styles/UIColors.xaml"/>
-                <ResourceDictionary Source="Styles/EstiloBotones.xaml"/>
+                <ResourceDictionary Source="styles/MasterStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
