--- a/Comercial Estefannny/styles/UIColors.xaml
+++ b/Comercial Estefannny/styles/UIColors.xaml
@@ -1,38 +1,145 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
-    <!--Background Colors-->
-    <Color x:Key="primaryBackColor1">#F8767A</Color>
-    <Color x:Key="primaryBackColor2">#F9878B</Color>
-    <Color x:Key="primaryBackColor3">#FA999C</Color>
-    <Color x:Key="secondaryBackColor1">#FBABAD</Color>
-    <Color x:Key="secondaryBackColor2">#FDCECF</Color>
-    <!--Window Border Colors-->
-    <Color x:Key="winBorderColor1">#9A6B6E</Color>
-    <Color x:Key="winBorderColor2">#BAA1A3</Color>
-    <Color x:Key="winBorderColor3">#DCB8BA</Color>
-    <!--Color Palette-->
-    <SolidColorBrush x:Key="color1" Color="#62150F"/>
-    <SolidColorBrush x:Key="color2" Color="#9D1D15"/>
-    <SolidColorBrush x:Key="color3" Color="#4ADAEC"/>
-    <SolidColorBrush x:Key="color4" Color="#FB539B"/>
-    <SolidColorBrush x:Key="color5" Color="#7E82FC"/>
-    <SolidColorBrush x:Key="color6" Color="#FFC047"/>
-    <SolidColorBrush x:Key="color7" Color="#EF6C96"/>
-    <SolidColorBrush x:Key="color8" Color="#78A3FC"/>
-    <SolidColorBrush x:Key="color9" Color="#07F3C0"/>
-    <SolidColorBrush x:Key="color10" Color="#FBA1AA"/>
+    <!-- =============================================== -->
+    <!-- PALETA VIBRANTE SIGUIENDO REGLA 60-30-10      -->
+    <!-- =============================================== -->
+    
+    <!-- BASE COLORS (60% - Fondos principales, neutrales) -->
+    <Color x:Key="Base50">#FEFEFE</Color>
+    <Color x:Key="Base100">#FAFAFA</Color>
+    <Color x:Key="Base200">#F5F5F5</Color>
+    <Color x:Key="Base300">#EEEEEE</Color>
+    <Color x:Key="Base800">#424242</Color>
+    <Color x:Key="Base900">#212121</Color>
+    
+    <!-- SUPPORT COLORS (30% - Paneles, navegación) -->
+    <!-- Rosa suave para paneles -->
+    <Color x:Key="Support100">#FCE4EC</Color>
+    <Color x:Key="Support200">#F8BBD9</Color>
+    <Color x:Key="Support300">#F48FB1</Color>
+    <Color x:Key="Support400">#F06292</Color>
+    
+    <!-- ACCENT COLORS (10% - Botones principales, destacados) -->
+    <!-- Colores de tu imagen vibrante -->
+    <Color x:Key="Fresa">#FF6B75</Color>
+    <Color x:Key="Magenta">#E91E63</Color>
+    <Color x:Key="Fucsia">#E040FB</Color>
+    <Color x:Key="Chicle">#F48FB1</Color>
+    <Color x:Key="Sandia">#F8BBD9</Color>
+    <Color x:Key="Rosa">#FCE4EC</Color>
+    <Color x:Key="Salmon">#FF8A80</Color>
+    <Color x:Key="Melocoton">#FFAB91</Color>
+    
+    <!-- COMPLEMENTARY COLORS (Para balance visual) -->
+    <Color x:Key="Turquesa">#1DE9B6</Color>
+    <Color x:Key="VerdeLima">#8BC34A</Color>
+    <Color x:Key="AzulElectrico">#2196F3</Color>
+    <Color x:Key="AmarilloNeon">#FFEB3B</Color>
+    <Color x:Key="VioletaProfundo">#673AB7</Color>
+    <Color x:Key="CoralSuave">#FF7043</Color>
+    <Color x:Key="Lavanda">#E1BEE7</Color>
+    <Color x:Key="Menta">#A5F3FC</Color>
+    
+    <!-- =============================================== -->
+    <!-- GRADIENTES ESPECTACULARES CON DEGRADADOS       -->
+    <!-- =============================================== -->
+    
+    <!-- GRADIENTES PRINCIPALES (Para fondos grandes) -->
+    <LinearGradientBrush x:Key="GradientPrimary" StartPoint="0,0" EndPoint="1,1">
+        <GradientStop Color="{StaticResource Base50}" Offset="0"/>
+        <GradientStop Color="{StaticResource Support100}" Offset="0.5"/>
+        <GradientStop Color="{StaticResource Support200}" Offset="1"/>
+    </LinearGradientBrush>
+    
+    <!-- GRADIENTES VIBRANTES (Para elementos destacados) -->
+    <LinearGradientBrush x:Key="GradientFresa" StartPoint="0,0" EndPoint="1,1">
+        <GradientStop Color="{StaticResource Fresa}" Offset="0"/>
+        <GradientStop Color="{StaticResource Salmon}" Offset="1"/>
+    </LinearGradientBrush>
+    
+    <LinearGradientBrush x:Key="GradientMagenta" StartPoint="0,0" EndPoint="1,1">
+        <GradientStop Color="{StaticResource Magenta}" Offset="0"/>
+        <GradientStop Color="{StaticResource Fucsia}" Offset="1"/>
+    </LinearGradientBrush>
+    
+    <LinearGradientBrush x:Key="GradientChicle" StartPoint="0,0" EndPoint="1,1">
+        <GradientStop Color="{StaticResource Chicle}" Offset="0"/>
+        <GradientStop Color="{StaticResource Sandia}" Offset="1"/>
+    </LinearGradientBrush>
+    
+    <!-- GRADIENTES COMPLEMENTARIOS -->
+    <LinearGradientBrush x:Key="GradientTurquesa" StartPoint="0,0" EndPoint="1,1">
+        <GradientStop Color="{StaticResource Turquesa}" Offset="0"/>
+        <GradientStop Color="{StaticResource Menta}" Offset="1"/>
+    </LinearGradientBrush>
+    
+    <LinearGradientBrush x:Key="GradientVioleta" StartPoint="0,0" EndPoint="1,1">
+        <GradientStop Color="{StaticResource VioletaProfundo}" Offset="0"/>
+        <GradientStop Color="{StaticResource Lavanda}" Offset="1"/>
+    </LinearGradientBrush>
+    
+    <!-- GRADIENTES RADIALES (Para efectos especiales) -->
+    <RadialGradientBrush x:Key="GradientRadialFresa" Center="0.5,0.5" RadiusX="1" RadiusY="1">
+        <GradientStop Color="{StaticResource Fresa}" Offset="0"/>
+        <GradientStop Color="{StaticResource Salmon}" Offset="0.7"/>
+        <GradientStop Color="{StaticResource Melocoton}" Offset="1"/>
+    </RadialGradientBrush>
+    
+    <!-- GRADIENTES SUTILES (Para paneles) -->
+    <LinearGradientBrush x:Key="GradientSutil" StartPoint="0,0" EndPoint="0,1">
+        <GradientStop Color="{StaticResource Base50}" Offset="0"/>
+        <GradientStop Color="{StaticResource Support100}" Offset="1"/>
+    </LinearGradientBrush>
+    
+    <!-- =============================================== -->
+    <!-- SOLID COLOR BRUSHES PARA COMPATIBILIDAD       -->
+    <!-- =============================================== -->
+    
+    <!-- Neutrals (60%) -->
+    <SolidColorBrush x:Key="BaseBrush" Color="{StaticResource Base100}"/>
+    <SolidColorBrush x:Key="SurfaceBrush" Color="{StaticResource Base50}"/>
+    <SolidColorBrush x:Key="TextPrimaryBrush" Color="{StaticResource Base900}"/>
+    <SolidColorBrush x:Key="TextSecondaryBrush" Color="{StaticResource Base800}"/>
+    
+    <!-- Support (30%) -->
+    <SolidColorBrush x:Key="PanelBrush" Color="{StaticResource Support200}"/>
+    <SolidColorBrush x:Key="NavigationBrush" Color="{StaticResource Support300}"/>
+    <SolidColorBrush x:Key="CardBrush" Color="{StaticResource Support100}"/>
+    
+    <!-- Accents (10%) -->
+    <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Fresa}"/>
+    <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Magenta}"/>
+    <SolidColorBrush x:Key="AccentBrush" Color="{StaticResource Fucsia}"/>
+    <SolidColorBrush x:Key="SuccessBrush" Color="{StaticResource VerdeLima}"/>
+    <SolidColorBrush x:Key="InfoBrush" Color="{StaticResource AzulElectrico}"/>
+    <SolidColorBrush x:Key="WarningBrush" Color="{StaticResource AmarilloNeon}"/>
+    
+    <!-- LEGACY COMPATIBILITY -->
+    <SolidColorBrush x:Key="color1" Color="{StaticResource Fresa}"/>
+    <SolidColorBrush x:Key="color2" Color="{StaticResource Magenta}"/>
+    <SolidColorBrush x:Key="color3" Color="{StaticResource Turquesa}"/>
+    <SolidColorBrush x:Key="color4" Color="{StaticResource Fucsia}"/>
+    <SolidColorBrush x:Key="color5" Color="{StaticResource VioletaProfundo}"/>
+    <SolidColorBrush x:Key="color6" Color="{StaticResource AmarilloNeon}"/>
+    <SolidColorBrush x:Key="color7" Color="{StaticResource Chicle}"/>
+    <SolidColorBrush x:Key="color8" Color="{StaticResource AzulElectrico}"/>
+    <SolidColorBrush x:Key="color9" Color="{StaticResource VerdeLima}"/>
+    <SolidColorBrush x:Key="color10" Color="{StaticResource Salmon}"/>
+    
     <!--Font Colors-->
-    <SolidColorBrush x:Key="titleColor1" Color="#000000"/>
-    <SolidColorBrush x:Key="titleColor2" Color="#D5CFF5"/>
-    <SolidColorBrush x:Key="titleColor3" Color="#BCBEE0"/>
-    <SolidColorBrush x:Key="plainTextColor1" Color="#802A1E"/>
-    <SolidColorBrush x:Key="plainTextColor2" Color="#62150F"/>
-    <SolidColorBrush x:Key="plainTextColor3" Color="#440000"/>
-    <!--Panel Colors-->
-    <SolidColorBrush x:Key="panelColor" Color="#D23027"/>
-    <SolidColorBrush x:Key="panelOverColor" Color="#CC1814"/>
-    <SolidColorBrush x:Key="panelActiveColor" Color="#C20000"/>
+    <SolidColorBrush x:Key="titleColor1" Color="{StaticResource Base900}"/>
+    <SolidColorBrush x:Key="titleColor2" Color="{StaticResource Base50}"/>
+    <SolidColorBrush x:Key="titleColor3" Color="{StaticResource Base800}"/>
+    <SolidColorBrush x:Key="plainTextColor1" Color="{StaticResource Base800}"/>
+    <SolidColorBrush x:Key="plainTextColor2" Color="{StaticResource Base900}"/>
+    <SolidColorBrush x:Key="plainTextColor3" Color="{StaticResource VioletaProfundo}"/>
+    
+    <!--Panel Colors con gradientes-->
+    <SolidColorBrush x:Key="panelColor" Color="{StaticResource Support300}"/>
+    <SolidColorBrush x:Key="panelOverColor" Color="{StaticResource Support400}"/>
+    <SolidColorBrush x:Key="panelActiveColor" Color="{StaticResource Fresa}"/>
+    
     <!--Button Colors-->
     <!--TextBox Colors-->
     <!--Etc-->
